--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
+    "lint": "ts-standard",
+    "dev": "ts-node-dev src/index.ts",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,9 +16,16 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "ts-node-dev": "2.0.0",
+    "ts-standard": "^12.0.2",
     "typescript": "5.4.5"
   },
   "dependencies": {
     "express": "4.19.2"
+  },
+  "eslintConfig": {
+    "extends": ["./node_modules/ts-standard/eslintrc.json"],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
   }
 }
