--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "express": "4.19.2"
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "pg": "8.11.5",
+    "pg-hstore": "2.3.4",
+    "sequelize": "6.37.3"
   },
   "eslintConfig": {
     "extends": [
